--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    
+    background-color: white;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -47,14 +47,19 @@ p {
     border-color: black;
 }
 
+.small-seperator {
+    width: 30%;
+    color: black;
+    border-color: black;
+}
+
 /* Academics div*/
 .academics {
     padding: 20px;
-    margin-left: auto;
-    margin-right: auto; 
-    margin-top: -25px;
     width: 80%;
-   
+    margin-top: -25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .academics p {
     text-align: center;
@@ -65,10 +70,10 @@ p {
 
 /* Personal info div */
 .personalInfo {
+    width: 80%;
     padding: 20px;
     margin-left: auto;
-    margin-right: auto;
-    width: 80%;
+    margin-right: auto;    
 }
 .personalInfo  p {
     text-align: center;
