--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -48,6 +48,15 @@
     border: 4px solid black;
 }
 
+.project-image img {
+    max-width: 95%;
+    border: 2px solid black;
+}
+
+.mid {
+    padding-top: 3em;
+}
+
 .text {
     text-align: center;
     vertical-align: top;
